--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>श्री नृसिंह बड़ा मंदिर हसामपुर</title>
+  <link rel="icon" type="image/png" href="/public/assets/static/favicon.png">
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
