--- a/client/index.html
+++ b/client/index.html
@@ -307,11 +307,13 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.9);
+      background: rgba(0, 0, 0, 0.4);
       z-index: 3000;
       display: flex;
       justify-content: center;
       align-items: center;
+      backdrop-filter: blur(6px);
+
     }
 
     /* Modal Overlay - Increased Z-Index to stay above Side Nav */
@@ -1074,7 +1076,7 @@
     </button>
 
     <img id="preview-img-target" src=""
-      class="max-h-[90vh] max-w-[90vw] object-contain shadow-2xl border-4 border-white rounded-lg animate-zoom-in">
+      class="max-h-[90vh] max-w-[90vw] object-contain shadow-2xl border-2 border-grey rounded-lg animate-zoom-in">
 
     <button onclick="changePreviewImage(1, event)"
       class="absolute right-4 md:right-10 text-white text-4xl hover:text-primary transition-all z-[3001]">
